--- a/global_wheat_dection_tutorial.ipynb
+++ b/global_wheat_dection_tutorial.ipynb
@@ -200,14 +200,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# load a model; pre-trained on COCO\n",
     "model = torchvision.models.detection.fasterrcnn_resnet50_fpn(pretrained=True)\n",
     "\n",
     "num_classes = 2  # 1 class (wheat) + background\n",
     "\n",
     "# get number of input features for the classifier\n",
-    "in_features = model.roi_heads.box_predictor.cls_score.in_features\n",
+    "in_features = model.roi_heads.box_predictor.cls_score.in_features #self.cls_score = nn.Linear(in_channels, num_classes)\n",
+    "#nn.Linear有一个属性是in_features\n",
     "\n",
     "# replace the pre-trained head with a new one\n",
     "model.roi_heads.box_predictor = FastRCNNPredictor(in_features, num_classes)"
